@startuml ch5_class_detection
' ============================================================
' CHAPITRE 5 — Diagramme de Classes — Module Detection
' Figure 5.x : Diagramme de classes du module Detection
' ============================================================

skinparam backgroundColor #FFFFFF
skinparam defaultFontName Arial
skinparam defaultFontSize 11
skinparam roundcorner 5

skinparam class {
  BackgroundColor #ECF0F1
  BorderColor #2C3E50
  FontColor #2C3E50
  HeaderBackgroundColor #9B59B6
  HeaderFontColor #FFFFFF
}

title <size:16><b>Diagramme de Classes — Module Detection & Explainer</b></size>

class LLMAnomaly {
  - id : UUID <<PK>>
  - tenant_id : UUID <<FK>>
  - anomaly_type : AnomalyTypeEnum
  - severity : SeverityEnum
  - algorithm_used : String
  - z_score : Float?
  - anomaly_score : Float?
  - expected_value : Float
  - actual_value : Float
  - deviation_pct : Float
  - dimension : String
  - dimension_value : String
  - details : JSON
  - detected_at : DateTime
  - created_at : DateTime
  --
  + is_critical() : Boolean
  + get_deviation() : Float
}

class LLMTokenBaseline {
  - id : UUID <<PK>>
  - tenant_id : UUID <<FK>>
  - dimension : String
  - dimension_value : String
  - mean_value : Float
  - std_value : Float
  - median_value : Float
  - sample_count : Integer
  - period_start : DateTime
  - period_end : DateTime
  - updated_at : DateTime
  --
  + recalculate(data: List<Float>) : void
  + get_z_score(value: Float) : Float
}

class AnomalyExplanation {
  - id : UUID <<PK>>
  - anomaly_id : UUID <<FK>>
  - explanation_text : Text
  - root_cause : String
  - impact_assessment : String
  - recommendations : JSON
  - provider_used : String
  - model_used : String
  - tokens_used : Integer
  - embedding : Vector(384)
  - confidence_score : Float
  - created_at : DateTime
  --
  + get_recommendations() : List<String>
}

class LLMCostDaily {
  - id : UUID <<PK>>
  - tenant_id : UUID <<FK>>
  - date : Date
  - provider : String
  - model : String
  - total_tokens : BigInteger
  - total_cost : Decimal
  - request_count : Integer
  - error_count : Integer
  - avg_latency_ms : Float
  - created_at : DateTime
  --
  + get_cost_per_request() : Decimal
}

class LLMCostMonthly {
  - id : UUID <<PK>>
  - tenant_id : UUID <<FK>>
  - month : Integer
  - year : Integer
  - provider : String
  - model : String
  - total_tokens : BigInteger
  - total_cost : Decimal
  - request_count : Integer
  --
  + get_monthly_total() : Decimal
}

class ForecastResult {
  - id : UUID <<PK>>
  - tenant_id : UUID <<FK>>
  - horizon_days : Integer
  - optimistic_cost : Decimal
  - baseline_cost : Decimal
  - pessimistic_cost : Decimal
  - daily_trend : Float
  - growth_rate : Float
  - risk_level : String
  - risks : JSON
  - generated_at : DateTime
  --
  + get_risk_assessment() : String
}

enum AnomalyTypeEnum {
  COST_SPIKE
  TOKEN_SPIKE
  LATENCY_SPIKE
  ERROR_RATE_SPIKE
  USAGE_DROP
}

enum SeverityEnum {
  INFO
  WARNING
  CRITICAL
}

LLMAnomaly --> AnomalyTypeEnum
LLMAnomaly --> SeverityEnum
LLMAnomaly "1" --> "0..1" AnomalyExplanation : expliquée par >
LLMAnomaly "0..*" --> "1" LLMTokenBaseline : comparée à >
LLMCostDaily "0..*" --> "1" LLMCostMonthly : agrégée dans >
ForecastResult ..> LLMCostDaily : basée sur >

@enduml
